# DC-Scrapper

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh  stop.sh
analysis/: db.py  keywords.py  llm.py  llm_agent.py  llm_report.py  sentiment.py  stats.py  timeseries.py  trends.py
analysis/data/: sentiment_ko.json  stopwords_ko.txt
dc_scraper/: __init__.py  __main__.py  config.py  db.py  fetch.py  parse_comment.py  parse_list.py  parse_view.py  scraper.py
dc_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dc_scraper/tests/: conftest.py  test_db.py  test_parse_comment.py  test_parse_list.py  test_parse_view.py  test_scraper.py
dc_scraper/tests/fixtures/: adult_page.html  comments.json  list_page.html  view_page.html
docs/: analysis-algorithms.md  analysis-improvement-proposal.md  architecture.md  intro.html
tests/: conftest.py  test_agent.py  test_analysis.py  test_llm.py  test_webapp.py
webapp/: api.py  jobs.py  main.py
webapp/static/: app.js  index.html  style.css
