[project]
name = "dc-scraper"
version = "0.1.0"
description = "Scrape a DCInside gallery's daily posts (list + body + comments) into SQLite"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
analysis = [
    "pandas>=2.2",
    "kiwipiepy>=0.17",
]
llm = [
    "anthropic>=0.40",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
dc-scraper = "dc_scraper.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dc_scraper", "analysis", "webapp"]

[tool.pytest.ini_options]
testpaths = ["dc_scraper/tests", "tests"]
